# nullifiers

./: Cargo.toml  README.md
bench_analysis/: extractor.py  extractor_non_pairing.py
benches/: bls12_381.rs  ed25519.rs  secp256k1.rs
src/: dy.rs  dy_pf.rs  dy_pf_priv.rs  dy_pf_priv_commited_output.rs  dy_priv.rs  lib.rs
